force-app/main/default/objects/Opportunity/fields/All_OLIs_Have_Sync_to_Renewal__c.field-meta.xml
<CustomField>
    <fullName>All_OLIs_Have_Sync_to_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All OLIs Have Sync to Renewal</label>
    <type>Checkbox</type>
</CustomField>