force-app/main/default/objects/Opportunity/fields/ARR_RUS__c.field-meta.xml
<CustomField>
    <fullName>ARR_RUS__c</fullName>
    <label>ARR</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Family__c</field>
        <operation>notEqual</operation>
        <value>Professional Service</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Include_in_ARR_Sum__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>