force-app/main/default/objects/Opportunity/fields/Contract_Assets_Processed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Assets_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to prevent duplicate Contract and Asset creation when Opportunity After Save flow runs. Set to true when flow processes, prevents re-execution on subsequent updates.</description>
    <inlineHelpText>Internal field used to prevent duplicate contract and asset creation. Automatically managed by flows.</inlineHelpText>
    <label>Contract Assets Processed</label>
    <type>Checkbox</type>
</CustomField>