force-app/main/default/objects/Opportunity/fields/Incremental_ARR_calc__c.field-meta.xml
<CustomField>
    <fullName>Incremental_ARR_calc__c</fullName>
    <formula>CASE(Deal_Type__c,
    &apos;Renewal&apos;, ARR_RUS__c - Starting_ARR__c,
    &apos;New Business&apos;, ARR_RUS__c,
    &apos;New Logo&apos;, ARR_RUS__c,
    &apos;Existing Logo&apos;, ARR_RUS__c,
    &apos;Change Order&apos;, ARR_RUS__c,
    &apos;Churn&apos;, 0 - Starting_ARR__c,
    ARR_RUS__c - Starting_ARR__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incremental ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>