force-app/main/default/objects/Opportunity/fields/Nextflow_Conversion_Approval__c.field-meta.xml
<CustomField>
    <fullName>Nextflow_Conversion_Approval__c</fullName>
    <label>Nextflow Conversion Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>