force-app/main/default/objects/Opportunity/fields/Ops_Approval_Override__c.field-meta.xml
<CustomField>
    <fullName>Ops_Approval_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ops Approval Override</label>
    <type>Checkbox</type>
</CustomField>