force-app/main/default/objects/Opportunity/fields/Sales_Approval_Override__c.field-meta.xml
<CustomField>
    <fullName>Sales_Approval_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Approval Override</label>
    <type>Checkbox</type>
</CustomField>