force-app/main/default/objects/Opportunity/fields/Services_SKUs__c.field-meta.xml
<CustomField>
    <fullName>Services_SKUs__c</fullName>
    <label># Services SKUs</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Family__c</field>
        <operation>equals</operation>
        <value>Professional Service</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>