force-app/main/default/objects/Opportunity/fields/Software_Subscription_Amount_RUS__c.field-meta.xml
<CustomField>
    <fullName>Software_Subscription_Amount_RUS__c</fullName>
    <label>Software Subscription Amount</label>
    <summarizedField>OpportunityLineItem.Billing_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Family__c</field>
        <operation>notEqual</operation>
        <value>Professional Service</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>