force-app/main/default/objects/Opportunity/fields/TCV__c.field-meta.xml
<CustomField>
    <fullName>TCV__c</fullName>
    <formula>Software_Subscription_Amount_RUS__c + Professional_Service_Amount_RUS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>