force-app/main/default/objects/Opportunity/recordTypes/New_Sales_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>New_Sales_Opportunity</fullName>
    <active>true</active>
    <businessProcess>SalesProcess</businessProcess>
    <label>New Contract</label>
</RecordType>