force-app/main/default/objects/Opportunity/validationRules/Active_POC.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_POC</fullName>
    <active>false</active>
    <description>No field edits allowed when &apos;Active_POC__c&apos; is true</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
Active_POC__c,
NOT(ISCHANGED(Active_POC__c))
)</errorConditionFormula>
    <errorMessage>You cannot edit this Opportunity when there is an Active POC.</errorMessage>
</ValidationRule>