force-app/main/default/objects/Opportunity/validationRules/Needs_Accepted_Quote.validationRule-meta.xml
<ValidationRule>
    <fullName>Needs_Accepted_Quote</fullName>
    <active>true</active>
    <description>An accepted and synced quote is required to move a deal to Closed Won</description>
    <errorConditionFormula>AND(
    OR(
        RecordType.DeveloperName = &apos;New_Sales_Opportunity&apos;,
        RecordType.DeveloperName = &apos;Proof_of_Concept&apos;,
        RecordType.DeveloperName = &apos;Existing_Customer_Opportunity&apos;
    ),
    ISPICKVAL(StageName, &quot;Closed Won&quot;),
    NOT(ISPICKVAL(Synced_Quote__r.Status, &quot;Accepted&quot;)),
NOT(OR($Profile.Name=&quot;System Administrator&quot;,$User.Division=&quot;Finance&quot;))
)</errorConditionFormula>
    <errorMessage>Must have an accepted and synced quote associated before passing marking a deal as Closed Won.</errorMessage>
</ValidationRule>