force-app/main/default/objects/Opportunity/validationRules/New_Opportunity_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Opportunity_Required_Fields</fullName>
    <active>false</active>
    <description>Requires Opportunity Type, LeadSource, CloseDate</description>
    <errorConditionFormula>AND(
    OR(
        RecordType.DeveloperName = &apos;New_Sales_Opportunity&apos;,
        RecordType.DeveloperName = &apos;Existing_Business_Opportunity&apos;
    ),
    OR(
        ISBLANK(TEXT(Type)),
        ISBLANK(TEXT(LeadSource)),
        ISBLANK(CloseDate)
    )
)</errorConditionFormula>
    <errorMessage>Opportunity Type, Lead Source, and Close Date must be filled in</errorMessage>
</ValidationRule>