force-app/main/default/objects/Opportunity/validationRules/Nextflow_Approval_Required_For_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Nextflow_Approval_Required_For_Close</fullName>
    <active>true</active>
    <description>Prevents opportunities from being marked as Closed Won when Nextflow Conversion Approval is Pending</description>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Closed Won&quot;),
    ISPICKVAL(Nextflow_Conversion_Approval__c, &quot;Pending&quot;)
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Cannot close opportunity as won while Nextflow Conversion Approval is pending. Please wait for approval completion or change approval status.</errorMessage>
</ValidationRule>