force-app/main/default/objects/Opportunity/validationRules/Pass_Discovery_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Pass_Discovery_Stage</fullName>
    <active>true</active>
    <description>required fields to pass Discovery stage</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;New_Sales_Opportunity&apos;,
    NOT(
        OR(
            ISPICKVAL(StageName, &quot;Initial Meeting&quot;),
            ISPICKVAL(StageName, &quot;Discovery&quot;)
        )
    ),
    OR(
        ISBLANK(Amount),
        ISBLANK(Current_Solution__c),
        ISBLANK(TEXT(Currently_Using_Nextflow__c)),
        ISBLANK(TEXT(Type_of_work__c)),
        ISBLANK(Current_Pains_Problems__c),
        ISPICKVAL(CRMPHD_Request_POC_Staffing__c, &quot;&quot;),
        ISPICKVAL(Deployment_Type__c, &quot;&quot;),
        ISPICKVAL(Cloud_Infrastructure_Provider__c, &quot;&quot;),
        ISPICKVAL(CRMPHD_Request_POC_Staffing__c, &quot;&quot;),
        ISPICKVAL(CRMPHD_Demo_Requested__c, &quot;&quot;),
        ISBLANK(TEXT(Deal_Type__c))
    ),
NOT(OR($Profile.Name=&quot;System Administrator&quot;,$User.Division=&quot;Finance&quot;)),
NOT(ISPICKVAL(StageName, &quot;Closed Lost&quot;))
)</errorConditionFormula>
    <errorMessage>All fields in the &apos;Discovery&apos; section must be filled out in order to advance the stage.</errorMessage>
</ValidationRule>