force-app/main/default/objects/Opportunity/validationRules/Pass_POC_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Pass_POC_Stage</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;New_Sales_Opportunity&apos;,
    NOT(
        OR(
            ISPICKVAL(StageName, &quot;Initial Meeting&quot;),
            ISPICKVAL(StageName, &quot;Discovery&quot;),
            ISPICKVAL(StageName, &quot;Qualification&quot;),
            ISPICKVAL(StageName, &quot;Validation&quot;),
            ISPICKVAL(StageName, &quot;POC&quot;)
        )
    ),
    POC_End_Date__c &lt; TODAY()  
)</errorConditionFormula>
    <errorDisplayField>POC_End_Date__c</errorDisplayField>
    <errorMessage>POC End Date must be Today or later to pass Qualification stage</errorMessage>
</ValidationRule>