force-app/main/default/objects/Opportunity/validationRules/Pass_Qualification_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Pass_Qualification_Stage</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;New_Sales_Opportunity&apos;,
NOT(
OR(
ISPICKVAL(StageName, &quot;Initial Meeting&quot;),
ISPICKVAL(StageName, &quot;Discovery&quot;),
ISPICKVAL(StageName, &quot;Qualification&quot;)
)
),
OR(
ISBLANK(TEXT(Tech_Eval_Type__c)),
ISBLANK(Demos__c),
ISBLANK(TEXT(Deployment_Type__c)),
ISBLANK(TEXT(Cloud_Infrastructure_Provider__c)),
ISBLANK(TEXT(Critical_Customer_Objectives__c)),
ISBLANK(Products_of_Interest__c)
),
NOT(OR($Profile.Name=&quot;System Administrator&quot;,$User.Division=&quot;Finance&quot;)),
NOT(ISPICKVAL(StageName, &quot;Closed Lost&quot;))
)</errorConditionFormula>
    <errorMessage>All fields in the &apos;Qualification&apos; section must be filled out in order to advance the stage.</errorMessage>
</ValidationRule>