force-app/main/default/objects/Opportunity/validationRules/Pass_Validation_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Pass_Validation_Stage</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
RecordType.DeveloperName = &apos;New_Sales_Opportunity&apos;,
RecordType.DeveloperName = &apos;Existing_Business_Opportunity&apos;
),
NOT(
OR(
ISPICKVAL(StageName, &quot;Initial Meeting&quot;),
ISPICKVAL(StageName, &quot;Discovery&quot;),
ISPICKVAL(StageName, &quot;Qualification&quot;),
ISPICKVAL(StageName, &quot;Validation&quot;)
)
),
OR(
ISBLANK(TEXT(POC_Needed__c)),
ISBLANK(Technical_Blockers__c)
),
NOT(OR($Profile.Name=&quot;System Administrator&quot;,$User.Division=&quot;Finance&quot;)),
NOT(ISPICKVAL(StageName, &quot;Closed Lost&quot;))
)</errorConditionFormula>
    <errorMessage>All fields in the &apos;Validation&apos; section must be filled out in order to advance the stage.</errorMessage>
</ValidationRule>