force-app/main/default/objects/Opportunity/validationRules/POC_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>POC_Needed</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;New_Sales_Opportunity&apos;,
    NOT(ISBLANK(TEXT(POC_Needed__c))),
    ISPICKVAL( StageName , &quot;POC&quot;),   
    ISBLANK(POC_Start_Date__c),
    ISBLANK(POC_End_Date__c),
    NOT(Send_Kickoff_Survey__c),
    ISBLANK(TEXT( POC_Type__c )),
    ISBLANK(TEXT( Region__c )),
    ISBLANK(TEXT( Urgency_Level__c ))
)</errorConditionFormula>
    <errorMessage>If POC Needed, complete POC Start Date, POC End Date, Send Kickoff Survey, POC Type, Region, Urgency Level fields.</errorMessage>
</ValidationRule>