force-app/main/default/objects/Opportunity/validationRules/POC_Opportunity_to_Closed_stage.validationRule-meta.xml
<ValidationRule>
    <fullName>POC_Opportunity_to_Closed_stage</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
      RecordType.DeveloperName = &quot;Proof_of_Concept&quot;,
    AND(
        ISBLANK(TEXT( POC_Outcome__c )),
        ISBLANK( POC_Feedback_Notes__c ),
        ISBLANK( POC_End_Date__c ),
        ISBLANK( Win_Loss_Reason_Details__c )
        ),
    AND(
        OR(ISPICKVAL(StageName, &quot;Closed Won&quot;),
           ISPICKVAL(StageName, &quot;Closed Lost&quot;)
           )),
NOT(OR($Profile.Name=&quot;System Administrator&quot;,$User.Division=&quot;Finance&quot;))
)</errorConditionFormula>
    <errorMessage>POC Outcome, POC Feedback Notes, POC End Date, Win/Loss Reason must be complete to change stage to Closed Won or Closed Lost</errorMessage>
</ValidationRule>