force-app/main/default/objects/Opportunity/validationRules/Products_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Products_Needed</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    OR( 
        RecordType.DeveloperName = &apos;New_Sales_Opportunity&apos;,
        RecordType.DeveloperName = &apos;Existing_Business_Opportunity&apos;
        
    ),
    NOT(ProductsAdded__c), 
    OR( ISPICKVAL(StageName, &quot;Qualification&quot;),
        ISPICKVAL(StageName, &quot;Closed Won&quot;), 
        ISPICKVAL(StageName, &quot;Closed Lost&quot;)),
NOT($Profile.Name=&quot;System Administrator&quot;)        
    
)</errorConditionFormula>
    <errorMessage>Add Opportunity Line Items to pass Discovery stage</errorMessage>
</ValidationRule>