force-app/main/default/objects/Opportunity/validationRules/Services_Fields_Required_for_Service_Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>Services_Fields_Required_for_Service_Opp</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Services_SKUs__c &gt; 0,
    ISPICKVAL(Services_Staffing__c, &quot;&quot;),
    ISNULL(Services_Lead__c))</errorConditionFormula>
    <errorMessage>Service staffing is required for opportunities with service SKUs</errorMessage>
</ValidationRule>