force-app/main/default/objects/Opportunity/validationRules/Survey_Sent_Required_for_POC.validationRule-meta.xml
<ValidationRule>
    <fullName>Survey_Sent_Required_for_POC</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
Send_Kickoff_Survey__c,
RecordType.DeveloperName=&apos;Proof_of_Concept&apos;,
ISBLANK(Survey_Sent__c),
ISPICKVAL(StageName, &quot;POC In Progress&quot;),
ISCHANGED(StageName)
)</errorConditionFormula>
    <errorDisplayField>Survey_Sent__c</errorDisplayField>
    <errorMessage>Enter a Survey Sent Date to move beyond the POC Initiated Stage</errorMessage>
</ValidationRule>