force-app/main/default/objects/Opportunity/validationRules/Unsuccessful_POCs_to_Closed_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Unsuccessful_POCs_to_Closed_Lost</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordType.DeveloperName=&quot;Proof_of_Concept&quot;,
ISCHANGED(StageName),
ISPICKVAL(POC_Outcome__c, &quot;Unsuccessful&quot;),
NOT(ISPICKVAL(StageName, &quot;Closed Lost&quot;)),
NOT($Profile.Name=&quot;System Administrator&quot;)
)</errorConditionFormula>
    <errorMessage>If the POC Outcome is &apos;Unsuccessful&apos; you can only move this Opportunity to Closed Lost.</errorMessage>
</ValidationRule>