force-app/main/default/objects/Opportunity/validationRules/VR_Term_Length_Locked_When_Synced.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Term_Length_Locked_When_Synced</fullName>
    <active>true</active>
    <description>Prevents term length modification when opportunity is synced from an approved quote</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Contract_End_Date_Override__c)),
  ISCHANGED(Term_Length_Months__c),
  NOT($Profile.Name = &quot;System Administrator&quot;)
)</errorConditionFormula>
    <errorDisplayField>Term_Length_Months__c</errorDisplayField>
    <errorMessage>Term length cannot be modified when synced from an approved quote. Create a new quote to change contract terms.</errorMessage>
</ValidationRule>